<resources>
    <string name="app_name">AskLive1.0</string>
    <string name="title_activity_welcome">AskLive</string>
    <string name="welcome_message">Welcome to AskLive!</string>
    <string name="slogan">Ask And You Shall Succeed</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="instructor">Instructor</string>
    <string name="student">Student</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">Home</string>
    <string name="prompt_code">Please input a class code:</string>
    <string name="prompt_code2">Class Code</string>
    <string name="title_activity_session">Session</string>
    <string name="title_activity_question_page">QuestionPage</string>
</resources>
